# Israeli-settlements-api

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: constant.py  main.py  managers.py  schemas.py  utils.py
app/db/: models.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0001_initial.py
