[tool.poetry]
name = "mavens-data-assignment-template"
version = "0.1.0"
description = ""
authors = ["valeriy <valeriy.vasilyev@themavens.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
sqlalchemy = "^2.0.22"
alembic = "^1.9.1"
asyncpg = ">=0.28.0,<0.30"
psycopg2-binary = "2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
